# amfi

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  aliases.js  index.html  search-index.js  settings.html  source-files.js
amfi/: all.html  enum.Error.html  enum.FundMaturity.html  enum.FundPlan.html  fn.daily_nav.html  fn.nav_from_file.html  fn.nav_from_url.html  index.html  sidebar-items.js  struct.NavRecord.html  struct.NavRecordIterator.html
examples/: local.rs
implementors/core/clone/: trait.Clone.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/iter/traits/iterator/: trait.Iterator.js
implementors/core/marker/: trait.Send.js  trait.Sync.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
implementors/std/error/: trait.Error.js
src/: lib.rs
src/amfi/: lib.rs.html
